syntax = "proto3";

option java_multiple_files = true;
option java_package = "ee.aleksale.order.proto.v1";

import "response-common.proto";
import "inventory-common.proto";

service OrderService {
  rpc makeOrder(stream InventoryOrder) returns (CommerceResponse);
}